care/force-app/main/default/objects/MC_RePrioritization__mdt/MC_RePrioritization__mdt.object-meta.xml
<CustomObject>
    <label>MC RePrioritization</label>
    <pluralLabel>MC RePrioritizations</pluralLabel>
</CustomObject>