care/force-app/main/default/objects/MC_RePrioritization__mdt/fields/Member_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Account_Type__c</fullName>
    <label>Member Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>