care/force-app/main/default/objects/MC_RePrioritization__mdt/fields/Member_Language__c.field-meta.xml
<CustomField>
    <fullName>Member_Language__c</fullName>
    <label>Member Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dutch</fullName>
                <default>true</default>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>Finnish</fullName>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Norwegian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>