care/force-app/main/default/objects/MC_RePrioritization__mdt/fields/Support_Skill__c.field-meta.xml
<CustomField>
    <fullName>Support_Skill__c</fullName>
    <label>Support Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Skill Matched</fullName>
            </value>
            <value>
                <fullName>Member Care - EN Sales</fullName>
            </value>
            <value>
                <fullName>Member Care - EN Tier 1</fullName>
            </value>
            <value>
                <fullName>Member Care - ROW Tier 1</fullName>
            </value>
            <value>
                <fullName>Member Care - EN Tier 2</fullName>
            </value>
            <value>
                <fullName>Member Care - ROW Tier 2</fullName>
            </value>
            <value>
                <fullName>MC Email</fullName>
            </value>
            <value>
                <fullName>Social US</fullName>
            </value>
            <value>
                <fullName>Social International</fullName>
            </value>
            <value>
                <fullName>Member Care - EN SM</fullName>
            </value>
            <value>
                <fullName>Member Care - ROW SM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>